--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -3,16 +3,21 @@
     text-shadow: 1px 1px 1px rgb(0 0 0 / 70%);
     -webkit-text-size-adjust: 100%;
     margin-bottom: -100px;
-    background-color: #323232;
+    background-color: #323232de;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper {
     width: 100%;
-    height: 100%;
+    margin-top: -50px;
+    padding-bottom: 100px;
+    height: calc(100vh - 100px);
     color: #f0ffff;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-weight: 700;
     text-align: center;
@@ -32,7 +37,7 @@
 
 .wrapper p {
     flex: 1;
-    margin-top: -20px;
+    margin-top: 20px;
     font: weight 700px;;
     font-size: 20px;
     z-index: 10;
