--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -4,8 +4,8 @@
     min-height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     background-color: var(--major-bg);
     display: block;
@@ -19,12 +19,10 @@
     color: rgb(255, 215, 114);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     font-weight: 700;
     text-align: center;
     position: relative;
-
 }
 
 .image {
@@ -52,9 +50,10 @@
 
 .input {
     outline-offset: none;
-    width: 200px;
+    padding: 10px;
+    width: 250px;
     border-radius: 5px;
-    height: 30px;
+    height: 45px;
     border: var(--main-color) 2px solid;
 }
 
@@ -62,9 +61,9 @@
     border-radius: 5px;
     background: var(--secondary-color);
     color: var(--font-white);
-    height: 30px;
-    padding: 0 10px;
-    font-weight: 500;
+    height: 45px;
+    padding: 0 1.25em;
+    font-weight: 700;
     margin-left: 10px;
     border: none;
     cursor: pointer;
@@ -72,10 +71,8 @@
 
 .items {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-    
     width: 100%;
 }
 
@@ -84,21 +81,52 @@
     flex-direction: column;
     text-align: center;
 }
+.card:first-child {
+    width: 75%;
+}
+.card:last-child {
+    width: 25%;
+}
 
 .cardContext {
-    margin-left: 8%;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: row;
 }
 .card h1 {
     font-size: 1.5em;
-    width: 100vw;
-    padding-top: 10px;
+    padding-top: 0.625em;
 }
 
 .card p {
     text-align: left;
-    font-size: .9em;
-    width: 25%;
+    font-size: .875em;
+    width: 35%;
     margin-inline: auto;
+}
+
+.signiture {
+    margin-top: 5vmin;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+@media only screen and (max-width:1050px)  {
+    .items {
+        flex-direction: column;
+    }
+    .card:first-child {
+        width: 95%;
+    }
+    .card:last-child {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width:500px) {
+    .container {
+        font-size: 0.8em;
+    }   
 }
