--- a/styles/PizzaList.module.css
+++ b/styles/PizzaList.module.css
@@ -16,9 +16,9 @@
 
 .desc {
     font-size: 1.5em;
-    color:  forestgreen;
+    color:  var(--secondary-color);
     font-weight: 400;
-    width: 70%;
+    width: 28.125em;
 }
 
 @media only screen and (max-width:770px) {
