--- a/styles/GridItem.module.css
+++ b/styles/GridItem.module.css
@@ -1,9 +1,43 @@
 .container {
     width: 33.3333%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
     padding: 20px 0 0 20px ;
 }
+.imgContainer {
+    cursor: pointer;
+    padding: 0 10px;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    min-width: 300px;
+    min-height: 55vh;
+    height: 100%;
+    display: flex;
 
+}
+.title {
+    display: flex;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 10px 10px 0 0;
+}
+.price {
+    color: var(--secondary-color);
+}
+.container p {
+    margin: 0;
+    background-color: darkgoldenrod;
+    width: 100%;
+}
+.container p:last-child{
+    border-radius: 0 0 10px 10px;
+    padding-bottom: 8px;
+}
