--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,3 +80,9 @@ a {
   left: -130px;
   background: conic-gradient(#af4153e6 21.5%, transparent 0 100%);
 } */
+
+@media only screen and (max-width:500px) {
+  .container {
+      font-size: 0.8em;
+  }   
+}
