Orders CRUD operations

--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -57,7 +57,7 @@
     opacity: 0.2;
 }
 
-.undone .checkedIcon, .inProgress .checkedIcon {
+.waiting .checkedIcon, .inProgress .checkedIcon {
     opacity: 0;
 }
 
