--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -1,14 +1,18 @@
 .container {
-    padding: 50px;
+    padding: 4vmin;
     display: flex;
 }
 
 .left {
-    flex: 2;
+    flex: 3;
 }
 
 .right {
     flex: 1;
+}
+
+.container button {
+    min-width: 200px;
 }
 
 .table {
@@ -36,7 +40,9 @@
 .wrapper {
     width: 90%;
     max-height: 300px;
-    background-color: #454545;
+    background-color: #929292;
+    filter: drop-shadow(0px 0px 5px #929292);
+    border-radius: 8px;
     padding: 10px 50px 50px;
     display: flex;
     flex-direction: column;
@@ -55,10 +61,30 @@
     margin-right: 10px;
 }
 
+.paymentMethods {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cashButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    cursor: pointer;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    font-weight: 600;
+    border: none;
+    color: teal;
+    background: white;
+}
+
 .button {
     margin-top: 20px;
     height: 30px;
-    width: 180px;
+    width: 100%;
     background: var(--secondary-color);
     color: var(--font-white);
 }
