Minor style changes & refactoring

--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -1,6 +1,8 @@
 .container {
     padding: 4vmin;
     display: flex;
+    min-height: calc(100vh - 100px);
+    flex-wrap: wrap;
 }
 
 .left {
@@ -17,10 +19,16 @@
 
 .table {
     width: 100%;
-    border-spacing: 20px;
+    text-align: left;
+    border-spacing: 0 20px;
+}
+
+.table td {
+    padding: 0 5px;
 }
 
 .imgContainer {
+    flex: 1;
     position: relative;
     width: 100px;
     height: 100px;
@@ -44,6 +52,7 @@
     filter: drop-shadow(0px 0px 5px #929292);
     border-radius: 8px;
     padding: 10px 50px 50px;
+    margin: 20px 0 0 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -72,11 +81,8 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    cursor: pointer;
     margin-bottom: 5px;
-    border-radius: 5px;
     font-weight: 600;
-    border: none;
     color: teal;
     background: white;
 }
@@ -87,4 +93,15 @@
     width: 100%;
     background: var(--secondary-color);
     color: var(--font-white);
+}
+
+@media only screen and (max-width: 555px) {
+    .container {
+        padding: 2vmin;
+        font-size: 12px;
+    }
+    .imgContainer {
+        width: 60px;
+        height: 60px;
+    }
 }
