--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -23,12 +23,12 @@
     text-align: center;
 }
 
-.wrapper h2 {
+.title {
     flex: 1;
     font-family: "Rubik",Arial, Helvetica, sans-serif;
     line-height: 1;
     font-weight: bolder;    
-    margin-top: 10%;
+    margin-top: 110px;
     font-size: 5rem;
     z-index: 10;
     transform: scale(1.2);
@@ -37,14 +37,13 @@
 
 .wrapper p {
     flex: 1;
-    margin-top: 20px;
-    font: weight 700px;;
-    font-size: 20px;
+    font-weight: 800;
+    font-size: 1.25em;
     z-index: 10;
 }
 
 .mobiles {
-    margin-top: 50px;
+    margin-top: 2em;
     display: flex;
     justify-content: center;
     cursor: pointer;
@@ -52,8 +51,8 @@
 
 .arrow_container {
     z-index: 5;
-    width: 48px;
-    height: 150px;
+    width: 3em;
+    height: 8em;
     position: absolute;
     top: 50% ;
     transform: translateY(-50%);
@@ -81,19 +80,15 @@
 
 @keyframes way-in {
     0% {
-        image-rendering: pixelated;
         filter: blur(10px);
     }
-    30% {
-        image-rendering: pixelated;
-        filter: blur(7px);
-    }
-    60% {
-        image-rendering: pixelated;
-        filter: blur(5px);
-    }
     100% {
-        filter: blur(2px);
-        image-rendering: pixelated;
+        filter: blur(1px);
+    }
+}
+
+@media only screen and (max-width: 655px) {
+    .container {
+        font-size: 12px;
     }
 }
