--- a/styles/GridItem.module.css
+++ b/styles/GridItem.module.css
@@ -1,23 +1,27 @@
 .container {
-    width: 33.3333%;
+    min-width: 300px;
+    min-height: 45vh;
+    max-width: 55vw;
+    max-height: 820px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 20px 0 0 20px ;
+    margin-block: 5px;
 }
 .imgContainer {
-    cursor: pointer;
+    display: flex;
     padding: 0 10px;
     align-items: center;
     position: relative;
     width: 100%;
-    min-width: 300px;
-    min-height: 55vh;
+    min-height: 35vh;
     height: 100%;
-    display: flex;
-
+    cursor: pointer;
 }
+
 .title {
     display: flex;
 }
@@ -28,8 +32,15 @@
     object-fit: cover;
     object-position: center;
     border-radius: 10px 10px 0 0;
+    transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.7s;
 }
+
+.container:hover * .img {
+    transform: scale(1.2);
+}
+
 .price {
+    padding: 10px 0 5px 0;
     color: var(--secondary-color);
 }
 .container p {
@@ -37,7 +48,19 @@
     background-color: darkgoldenrod;
     width: 100%;
 }
-.container p:last-child{
+
+.desc {
+    min-height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 0 0 10px 10px;
-    padding-bottom: 8px;
+    padding: 0 15px 15px;
 }
+
+@media only screen and (max-width: 655px) {
+    .container {
+        max-width: 100%;
+    } 
+ }
+ 
