--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -1,6 +1,8 @@
 .container {
+    min-height: calc(100vh - 100px);
     padding: 50px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .left {
@@ -14,7 +16,11 @@
 .table {
     text-align: left;
     width: 100%;
-    border-spacing: 20px;
+    border-spacing: 0 20px;
+}
+
+.table td {
+    padding: 0 5px;
 }
 
 .row:last-child {
@@ -22,11 +28,12 @@
     width: 50%;
     display: flex;
     justify-content: space-around;
+    padding: 20px 0 0 20px;
 }
 
 .row:last-child span {
     font-size: 13px;
-
+    padding: 5px;
 }
 
 .done {
@@ -69,8 +76,11 @@
 .wrapper {
     width: 90%;
     max-height: 300px;
-    background-color: #454545;
+    background-color: #929292;
+    filter: drop-shadow(0px 0px 5px #929292);
+    border-radius: 8px;
     padding: 10px 50px 50px;
+    margin: 20px 0 0 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -96,4 +106,15 @@
     font-weight: 600;
     background: white;
     color: teal;
+}
+
+.paidIcon {
+    font-size: medium;
+}
+
+@media only screen and (max-width: 555px) {
+    .container {
+        padding: 2vmin;
+        font-size: 12px;
+    }
 }
