--- a/styles/PizzaList.module.css
+++ b/styles/PizzaList.module.css
@@ -1,10 +1,11 @@
 .container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     background-image: linear-gradient(to top, var(--major-bg) , var(--major-bg-dark) );
-    text-align: center;
+    padding-inline: 20px;
 }
 
 .title {
@@ -21,6 +22,23 @@
     width: 28.125em;
 }
 
+.grid_wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
+    row-gap: 2em;
+    column-gap: 2em;
+    margin-top: 100px;
+    width: 100%;
+    height: 100%;
+    margin-right: 20px;
+}
+
+@media only screen and (max-width: 1150px) {
+   .grid_wrapper {
+        grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+   } 
+}
+
 @media only screen and (max-width:770px) {
     .title {
         font-size: 1.5em;
@@ -29,15 +47,4 @@
     .desc {
         font-size: 1em;
     } 
-}
-
-.grid_wrapper {
-    margin-top: 100px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-right: 20px;
 }
