--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,5 +1,6 @@
 .container {
     min-height: calc(100vh - 100px);
+    height: 100%;
     display: flex;
     margin-inline: 50px;
     border-radius: 10px;
@@ -11,12 +12,15 @@
     align-items: flex-start;
     flex-wrap: wrap;
     width: 100%;
+    height: 100%;
 }
 
 .left {
     flex: 1;
+    min-height: calc(100vh - 140px);
     height: 100%;
     min-width: 300px;
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,14 +30,21 @@
     min-width: 300px;
     height: 100%;
     flex: 1;
-    margin-left: 40px;
-    padding-right: 5vw ;
 }
 
 .imageContainer {
+    flex: 1;
+    margin-right: 20px;
+    display: flex;
+    object-fit: cover;
+    align-items: center;
     position: relative;
-    width: 100%;
-    height: 100%;
+    align-items: flex-start;
+    object-position: 0 0;
+    width: 500px;
+    height: 500px;
+    min-width: 240px;
+    min-height: 440px;
 }
 
 .price {
@@ -74,6 +85,7 @@
 .sizes {
     display: flex;
     justify-content: space-between;
+    min-width: 240px;
     width: 36vmin;
 }
 
@@ -143,4 +155,10 @@
     margin-left: 10px;
     border: none;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 699px) {
+    .imageContainer{
+        margin-right: 0;
+    }
 }
