--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,10 @@ button {
 
 }
 
+input, textarea {
+  outline: none;
+}
+
 :root {
   --main-color:  #d4a373;
   --secondary-color: #9a031e;
@@ -73,23 +77,4 @@ button {
   top: -20px;
   left: -5px;
   background: #0f1111
-}
-
- /* pizza slice
-.logo:after {
-  z-index: -1;
-  position: absolute;
-  content: "";
-  width: 300px;
-  height: 170px;
-  border-radius: 50%;
-  top: -25px;
-  left: -130px;
-  background: conic-gradient(#af4153e6 21.5%, transparent 0 100%);
-} */
-
-@media only screen and (max-width:500px) {
-  .container {
-      font-size: 0.8em;
-  }   
 }
