--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -54,13 +54,13 @@
 
 .button {
     border-radius: 5px;
-    background: var(--secondary-color);
+    background: var(--btn-first-bg);
+    border: var(--btn-first-border);
     color: var(--font-white);
     height: 45px;
     padding: 0 1.25em;
     font-weight: 700;
     margin-left: 10px;
-    border: none;
     cursor: pointer;
 }
 
