--- a/styles/GridItem.module.css
+++ b/styles/GridItem.module.css
@@ -11,15 +11,29 @@
     padding: 20px 0 0 20px ;
     margin-block: 5px;
 }
+
+.wrapper {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.wrapper:hover {
+    box-shadow: 0 0 10px 1px #00000070;
+}
+
 .imgContainer {
     display: flex;
     padding: 0 10px;
     align-items: center;
     position: relative;
     width: 100%;
+    border-radius: 10px 10px 0 0;
     min-height: 35vh;
     height: 100%;
-    cursor: pointer;
 }
 
 .title {
@@ -36,7 +50,9 @@
 }
 
 .container:hover * .img {
+    border-radius: 32% 32% 0 0;
     transform: scale(1.2);
+    object-position: 75% 75%;
 }
 
 .price {
