--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -71,7 +71,9 @@
 }
 
 .cart {
+    font-size: 14px;
     padding: 10px;
+    margin-left: 20px;
     cursor: pointer;
     z-index: 15;
     position: relative;
@@ -82,8 +84,13 @@
     font-weight: 900;
     color: var(--logo-yellow);
     position: absolute;
-    right:23px;
-    top: 19px;
+    inset: 0 0 0 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-content: center;
+    transform: translate( 3px, -5px);
 }
 .burger {
     filter:invert(90%) drop-shadow(0 1px 1px #0006 ) ;
@@ -102,6 +109,11 @@
     display: none;
 }
 
+.narrowLogo {
+    margin-left: 40px;
+    margin-bottom: 32px;
+}
+
 @media only screen and (max-width: 1024px) {
     .burger {
         display: flex;
@@ -110,7 +122,7 @@
         display: none;
     }
     .item:first-child {
-        flex: 4;
+        flex: 2;
         justify-content: center;
     }
     .item:last-child {
@@ -127,5 +139,17 @@
     }
     .item {
         min-width: none;
+    }
+}
+
+@media only screen and (max-width: 445px) {
+    .text {
+        display: none;
+    }
+    .callButton {
+        display: none;
+    }
+    .narrowLogo {
+        margin-left: -5vw;
     }
 }
