--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,6 +60,7 @@ input, textarea {
   line-height: 20px;
   margin: 10px 0 0 10px;
   position: relative;
+  cursor: pointer;
   z-index: 10;
 }
 .logo span {
@@ -74,13 +75,15 @@ input, textarea {
   z-index: -1;
   position: absolute;
   content: "";
-  width: 130px;
+  width: 135px;
   height: 80px;
-  transform: skew(-45deg, 15deg);
+  transform: skew(-45deg, 7deg);
   border-radius: 47%;
   top: -20px;
   left: -5px;
-  background: #0f1111
+  background: #0f1111;
+  -webkit-box-shadow: inset 0 0 8px rgba(180, 180, 180, 0.489), 0 0 5px rgba(180, 180, 180, 0.5);
+  box-shadow: inset 0 0 8px rgba(180, 180, 180, 0.489), 0 0 5px rgba(180, 180, 180, 0.5);
 }
 
 .loading {
