--- a/styles/OrderDetail.module.css
+++ b/styles/OrderDetail.module.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     place-items: center;
+    position: relative;
 }
 
 .title {
@@ -67,4 +68,18 @@
     border: var(--btn-second-border);
     padding: 12px 10px;    
     border-radius: 5px;
+}
+
+.return {
+    position: absolute;
+    display: grid;
+    place-content: center;
+    top: 25px;
+    right: 35px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: var(--secondary-color);
+    background: #0009;
+    cursor: pointer;
 }
