--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -47,24 +47,26 @@
     min-height: 440px;
 }
 
-.price {
-    position: relative;
-    color: #0f1111;
-    font-size: 24px;
-    font-weight: 400;
-}
 .cross {
     transform:scale(1.1 , 1.2)
 }
 
 .discount {
+    font-size: 24px;
     border-bottom: 1px solid var(--secondary-color);
-    margin-left: 10px;
     color: var(--secondary-color);
-
-    animation: fade 2s cubic-bezier(0.165, 0.84, 0.44, 1) both infinite;
 }
-@keyframes fade {
+
+.price {
+    position: relative;
+    color: #0f1111;
+    font-weight: 400;
+    font-size: 16px;
+    margin-left: 10px;
+    animation: pulse 2s cubic-bezier(0.165, 0.84, 0.44, 1) both infinite;
+}
+
+@keyframes pulse {
     0% {
         opacity: 1;
     }
